--- a/src/app/features/auth/components/login/login.component.html
+++ b/src/app/features/auth/components/login/login.component.html
@@ -14,6 +14,12 @@
             <input class="input mt-4" placeholder="Senha" type="password" name="password" [(ngModel)]="user.password"
               required minlength="4">
 
+            <div *ngIf="!this.isLoginValid" class="mt-4">
+              <p class="text has-text-warning">
+                Usuário ou senha inválidos
+              </p>
+            </div>
+
             <button class="button is-primary mt-4"
               [ngClass]="{'is-loading': isLoading }"
             type="submit" [disabled]="!loginForm.valid">Login</button>
